--- a/ace 0.1/ace 0.1.vcxproj
+++ b/ace 0.1/ace 0.1.vcxproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <ClInclude Include="firm.h" />
     <ClInclude Include="household.h" />
+    <ClInclude Include="labormarket.h" />
     <ClInclude Include="message.h" />
     <ClInclude Include="offer.h" />
     <ClInclude Include="service.h" />
@@ -92,6 +93,7 @@
     <ClCompile Include="ace 0.1.cpp" />
     <ClCompile Include="firm.cpp" />
     <ClCompile Include="household.cpp" />
+    <ClCompile Include="labormarket.cpp" />
     <ClCompile Include="message.cpp" />
     <ClCompile Include="offer.cpp" />
     <ClCompile Include="service.cpp" />
