--- a/ace 0.1/ace 0.1.vcxproj.filters
+++ b/ace 0.1/ace 0.1.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="message.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="labormarket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="message.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="labormarket.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
