--- a/ace 0.1/ace 0.1.vcxproj
+++ b/ace 0.1/ace 0.1.vcxproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="firm.h" />
+    <ClInclude Include="goodmarket.h" />
     <ClInclude Include="household.h" />
     <ClInclude Include="labormarket.h" />
     <ClInclude Include="message.h" />
@@ -92,6 +93,7 @@
   <ItemGroup>
     <ClCompile Include="ace 0.1.cpp" />
     <ClCompile Include="firm.cpp" />
+    <ClCompile Include="goodmarket.cpp" />
     <ClCompile Include="household.cpp" />
     <ClCompile Include="labormarket.cpp" />
     <ClCompile Include="message.cpp" />
