introducing data center
changed log file to data center file

--- a/ace 0.1/ace 0.1.vcxproj.filters
+++ b/ace 0.1/ace 0.1.vcxproj.filters
@@ -51,7 +51,7 @@
     <ClInclude Include="goodmarket.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="log.h">
+    <ClInclude Include="data.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -89,7 +89,7 @@
     <ClCompile Include="goodmarket.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="log.cpp">
+    <ClCompile Include="data.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
