--- a/ace 0.1/ace 0.1.vcxproj
+++ b/ace 0.1/ace 0.1.vcxproj
@@ -82,7 +82,7 @@
     <ClInclude Include="goodmarket.h" />
     <ClInclude Include="household.h" />
     <ClInclude Include="labormarket.h" />
-    <ClInclude Include="log.h" />
+    <ClInclude Include="data.h" />
     <ClInclude Include="message.h" />
     <ClInclude Include="offer.h" />
     <ClInclude Include="service.h" />
@@ -97,7 +97,7 @@
     <ClCompile Include="goodmarket.cpp" />
     <ClCompile Include="household.cpp" />
     <ClCompile Include="labormarket.cpp" />
-    <ClCompile Include="log.cpp" />
+    <ClCompile Include="data.cpp" />
     <ClCompile Include="message.cpp" />
     <ClCompile Include="offer.cpp" />
     <ClCompile Include="service.cpp" />
