--- a/ace 0.1/ace 0.1.vcxproj
+++ b/ace 0.1/ace 0.1.vcxproj
@@ -76,6 +76,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="ClassDiagram11.cd" />
+    <None Include="ClassDiagram12.cd" />
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
