--- a/ace 0.1/ace 0.1.vcxproj.filters
+++ b/ace 0.1/ace 0.1.vcxproj.filters
@@ -17,6 +17,7 @@
   <ItemGroup>
     <None Include="ReadMe.txt" />
     <None Include="ClassDiagram11.cd" />
+    <None Include="ClassDiagram12.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
