--- a/ace 0.1/ace 0.1.vcxproj.filters
+++ b/ace 0.1/ace 0.1.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="data.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="macro.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="data.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="macro.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
