--- a/ace 0.1/ace 0.1.vcxproj.filters
+++ b/ace 0.1/ace 0.1.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="unconscious.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="firms.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="households.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -81,6 +87,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="unconscious.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="firms.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="households.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
