--- a/ace 0.1/ace 0.1.vcxproj
+++ b/ace 0.1/ace 0.1.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="data.h" />
     <ClInclude Include="macro.h" />
     <ClInclude Include="offer.h" />
+    <ClInclude Include="scenario.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="unconscious.h" />
@@ -101,6 +102,7 @@
     <ClCompile Include="data.cpp" />
     <ClCompile Include="macro.cpp" />
     <ClCompile Include="offer.cpp" />
+    <ClCompile Include="scenario.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="unconscious.cpp" />
     <ClCompile Include="world.cpp" />
