--- a/ace 0.1/ace 0.1.vcxproj.filters
+++ b/ace 0.1/ace 0.1.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="scenario.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="qlearning.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -99,6 +102,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="scenario.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="qlearning.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
