--- a/ace 0.1/ace 0.1.vcxproj
+++ b/ace 0.1/ace 0.1.vcxproj
@@ -87,6 +87,7 @@
     <ClInclude Include="matrix.h" />
     <ClInclude Include="offer.h" />
     <ClInclude Include="qlearning.h" />
+    <ClInclude Include="rls.h" />
     <ClInclude Include="scenario.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -106,6 +107,7 @@
     <ClCompile Include="matrix.cpp" />
     <ClCompile Include="offer.cpp" />
     <ClCompile Include="qlearning.cpp" />
+    <ClCompile Include="rls.cpp" />
     <ClCompile Include="scenario.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="unconscious.cpp" />
